force-app/main/default/objects/Engagement_Planned_Message__c/Engagement_Planned_Message__c.object-meta.xml
<CustomObject>
    <description>This object stores information about messages being sent to contacts include email template to be used, sequence of message and send date.</description>
    <label>Engagement Planned Message</label>
    <nameField>
        <displayFormat>EPM-{0}</displayFormat>
        <label>Engagement Planned ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Engagement Planned Messages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>