force-app/main/default/objects/Engagement_Planned_Message__c/fields/Message_Template__c.field-meta.xml
<CustomField>
    <fullName>Message_Template__c</fullName>
    <label>Message Template</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Template 1</fullName>
            </value>
            <value>
                <fullName>Template 2</fullName>
            </value>
            <value>
                <fullName>Template 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>