force-app/main/default/objects/Engagement_Planned_Message__c/fields/Message_Text__c.field-meta.xml
<CustomField>
    <fullName>Message_Text__c</fullName>
    <label>Message Text</label>
    <length>3000</length>
    <type>Html</type>
</CustomField>