force-app/main/default/objects/Engagement_Planned_Message__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>Named used to determine if it's the correct template.</description>
    <inlineHelpText>Named used to determine if it's the correct template.</inlineHelpText>
    <label>Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>