force-app/main/default/objects/Engagement_Planned_Message__c/fields/Send_Date_Engagement_Contact__c.field-meta.xml
<CustomField>
    <fullName>Send_Date_Engagement_Contact__c</fullName>
    <description>The date the Engagement Contact record was created.</description>
    <inlineHelpText>The date the Engagement Contact record was created.</inlineHelpText>
    <label>Send Date (Engagement Contact)</label>
    <type>Date</type>
</CustomField>