force-app/main/default/objects/Engagement_Planned_Message__c/fields/Send_Date_Last_Planned_Message__c.field-meta.xml
<CustomField>
    <fullName>Send_Date_Last_Planned_Message__c</fullName>
    <description>The End Date indicated in the associated Engagement record.</description>
    <inlineHelpText>The End Date indicated in the associated Engagement record.</inlineHelpText>
    <label>Send Date (Last Planned Message)</label>
    <type>Date</type>
</CustomField>