force-app/main/default/objects/Engagement_Planned_Message__c/fields/Send_Date_Planned_Message_1_Date__c.field-meta.xml
<CustomField>
    <fullName>Send_Date_Planned_Message_1_Date__c</fullName>
    <description>The Start Date indicated in the associated Engagement record.</description>
    <inlineHelpText>The Start Date indicated in the associated Engagement record.</inlineHelpText>
    <label>Send Date (Planned Message 1 Date)</label>
    <type>Date</type>
</CustomField>